k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aqi-app
  labels:
    name: aqi-app
